<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.android.bakeme.MainActivity">

    <fragment
        android:id="@+id/media_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/recipe_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/recipe_step"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_next_bt"
        app:layout_constraintStart_toEndOf="@+id/nav_prev_bt"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageButton
        android:id="@+id/nav_prev_bt"
        style="@style/navigationButtons"
        android:layout_height="0dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:contentDescription="@string/navigate_back_contDescrip" />

    <ImageButton
        android:id="@+id/nav_next_bt"
        style="@style/navigationButtons"
        android:layout_height="0dp"
        android:src="@drawable/arrow_right"
        android:text="@string/navigate_forward"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_step"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_step"
        android:contentDescription="@string/navigate_forward_contDescrip" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>