<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.android.bakeme.ui.MainActivity">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/video_thumbnail_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/ic_launcher_background"
        android:contentDescription="@string/thumbnail_of_video"
        app:layout_constraintBottom_toTopOf="@+id/recipe_step_tv"
        app:layout_constraintEnd_toEndOf="@+id/exo_play"
        app:layout_constraintStart_toStartOf="@+id/exo_play"
        app:layout_constraintTop_toTopOf="@+id/exo_play"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/recipe_step_tv"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_next_bt"
        app:layout_constraintStart_toEndOf="@+id/nav_prev_bt"
        tools:text="detailed recipe step is displayed here." />

    <ImageButton
        android:id="@+id/nav_prev_bt"
        style="@style/navigationButtons"
        android:layout_marginStart="@dimen/margin"
        android:contentDescription="@string/navigate_back_contDescrip"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_step_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_step_tv" />

    <ImageButton
        android:id="@+id/nav_next_bt"
        style="@style/navigationButtons"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:contentDescription="@string/navigate_forward_contDescrip"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_step_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_step_tv" />

</android.support.constraint.ConstraintLayout>