<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/media_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        tools:context="com.example.android.bakeme.ui.MainActivity">

        <ImageButton
            android:id="@id/exo_prev"
            style="@style/ExoMediaButton.Previous"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:contentDescription="@string/prev_button_contDescrip"
            app:layout_constraintBottom_toBottomOf="@+id/exo_play"
            app:layout_constraintEnd_toStartOf="@+id/exo_play"
            app:layout_constraintTop_toTopOf="@+id/exo_play" />

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/play_button_contDescrip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:contentDescription="@string/pause_button_contDescrip"
            app:layout_constraintBottom_toBottomOf="@+id/exo_play"
            app:layout_constraintStart_toEndOf="@+id/exo_play"
            app:layout_constraintTop_toTopOf="@+id/exo_play" />

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/exo_progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exo_progress" />

        <SeekBar
            android:id="@id/exo_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_weight="1"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/exo_play"
            app:layout_constraintEnd_toStartOf="@+id/exo_duration"
            app:layout_constraintStart_toEndOf="@+id/exo_position" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/exo_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exo_progress" />

    </android.support.constraint.ConstraintLayout>
</layout>